2013-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c: Allow reading signed integer TIFF files even
	though internal storage uses signed integers.  Negative values
	will be handled incorrectly and positive values will be scaled to
	only 1/2 of the available unsigned range.  Perhaps the situation
	will improve in the future.

	* tests/rwfile_miff.tap: Test MIFF with specific depths.

	* tests/rwblob.c: Add support for -quality option.

	* tests/rwfile.c: Add support for -quality option.

	* tests/rwfile.tap: Add tests for PGM and PPM ASCII subformats.

	* coders/pnm.c (WritePNMImage): PGM "P2" format writer was broken
	at 8-bit depth due to lack of white-space between the output
	values.  Fixed now.

2013-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fixes to be able to read MIFF
	written by ImageMagick 6.X, including DirectClass grayscale
	images.  Interoperabilty is not completely assured since
	ImageMagick is not consistent with itself and may only be able to
	read the file it just wrote.  Reading DirectClass grayscale RLE
	compressed images is not supported yet.

2013-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Only delete the CMS
	transform if it is non-null.  If lcms returned a null transform,
	an assertion was thrown in lcms when the pointer was freed.
	Problem was reported by James Bardin.

2013-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c: PseudoClass format was written incorrectly in
	that sample storage size is supposed to be selected based on the
	size of the colormap, but it was being selected based on the depth
	parameter instead, leading to excessively sized files and failure
	to read what was written.  RLE compressed formats had the sense of
	the alpha channel inverted from the other compression methods, and
	contrary to the specification.  PseudoClass with Alpha was not