@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130922"
-#define public MagickPackageReleaseDate "snapshot-20130922"
+#define public MagickPackageVersionAddendum ".020130928"
+#define public MagickPackageReleaseDate "snapshot-20130928"
