@@ -281,9 +281,6 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
     max_value,
     samples_per_pixel;
 
-  Quantum
-    *scale;
-
   /*
     Open image file.
   */
@@ -568,7 +565,6 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
       number_pixels=image->columns*image->rows;
       if (number_pixels == 0)
         ThrowReaderException(CorruptImageError,NegativeOrZeroImageSize,image);
-      scale=(Quantum *) NULL;
       if (image->storage_class == PseudoClass)
         {
           /*
@@ -595,31 +591,6 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                         (((double) MaxRGB*pixel.blue)/0x03+0.5);
                       i++;
                     }
-            }
-        }
-      if ((image->storage_class != PseudoClass) || (max_value > MaxRGB))
-        {
-          /*
-            Compute pixel scaling table for ASCII formats.
-          */
-          switch(format)
-            {
-            case PBM_ASCII_Format:
-            case PGM_ASCII_Format:
-            case PPM_ASCII_Format:
-              {
-                scale=MagickAllocateArray(Quantum *,
-                                          (max_value+1),sizeof(Quantum));
-                if (scale == (Quantum *) NULL)
-                  ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,
-                                       image);
-                for (i=0; i <= max_value; i++)
-                  scale[i]=ScaleAnyToQuantum((unsigned long) i, max_value);
-                break;
-              }
-            default:
-              {
-              }
             }
         }
       if (image_info->ping && (image_info->subrange != 0))
@@ -711,8 +682,6 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
 			ValidateScalingIndex(image, intensity, max_value);
 			if (EOFBlob(image))
 			  break;
-			if (scale != (Quantum *) NULL)
-			  intensity=scale[intensity];
 			index=intensity;
 			VerifyColormapIndex(image,index);
 			indexes[x]=index;
@@ -732,8 +701,7 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
 			ValidateScalingIndex(image, intensity, max_value);
 			if (EOFBlob(image))
 			  break;
-			if (scale != (Quantum *) NULL)
-			  intensity=scale[intensity];
+                        intensity=ScaleAnyToQuantum(intensity, max_value);
 			q->red=q->green=q->blue=intensity;
 			is_monochrome &= IsMonochrome(*q);
 			q++;
@@ -787,12 +755,9 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                     if (EOFBlob(image))
                       break;
                     ValidateScalingPixel(image, pixel, max_value);
-                    if (scale != (Quantum *) NULL)
-                      {
-                        pixel.red=scale[pixel.red];
-                        pixel.green=scale[pixel.green];
-                        pixel.blue=scale[pixel.blue];
-                      }
+                    pixel.red=ScaleAnyToQuantum(pixel.red, max_value);
+                    pixel.green=ScaleAnyToQuantum(pixel.green, max_value);
+                    pixel.blue=ScaleAnyToQuantum(pixel.blue, max_value);
                     q->red=(Quantum) pixel.red;
                     q->green=(Quantum) pixel.green;
                     q->blue=(Quantum) pixel.blue;
@@ -1082,8 +1047,6 @@ static Image *ReadPNMImage(const ImageInfo *image_info,ExceptionInfo *exception)
         default:
           ThrowReaderException(CorruptImageError,ImproperImageHeader,image);
         }
-      if (scale != (Quantum *) NULL)
-        MagickFreeMemory(scale);
       /*
         Proceed to next image.
       */
@@ -1346,7 +1309,7 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
   scene=0;
   do
     {
-      depth=(image->depth <= 8 ? 8 : 16);
+      depth=(image->depth <= 8 ? 8 : image->depth <= 16 ? 16 : 32);
 
       /*
 	Write PNM file header.
@@ -1576,11 +1539,9 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
 
 	    i=0;
 	    j=0;
-	    
-	    if (depth <= 8)
-	      value=255;
-	    else
-	      value=65535;
+
+            value=(depth <=8 ? 255 : depth <= 16 ? 65535 : 4294967295);
+
 	    j += sprintf(&buffer[j],"%u\n",value);
 	    for (y=0; y < image->rows; y++)
 	      {
@@ -1603,11 +1564,17 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
 			AppendUnsignedCharValueToString(j,buffer,value);
                         buffer[j++] = ' ';
 		      }
-		    else
+                    else if (depth <= 16)
 		      {
 			value=ScaleQuantumToShort(index);
 			j += sprintf(&buffer[j]," %u",value);
 		      }
+                    else
+                      {
+			value=ScaleQuantumToLong(index);
+			j += sprintf(&buffer[j]," %u",value);
+                      }
+
 		    i++;
 		    if (i == 12)
 		      {
@@ -1663,10 +1630,8 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
 	    i=0;
 	    j=0;
 
-	    if (depth <= 8)
-	      value=255;
-	    else
-	      value=65535;
+            value=(depth <=8 ? 255 : (depth <= 16 ? 65535 : 4294967295));
+
 	    j += sprintf(&buffer[j],"%u\n",value);
 	    for (y=0; y < image->rows; y++)
 	      {
@@ -1691,10 +1656,19 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
 			AppendUnsignedCharValueToString(j,buffer,value);
 			buffer[j++] = ' ';
 		      }
+                    else if (depth <= 16)
+                      {
+			j += sprintf(&buffer[j],"%u %u %u ",
+                                     ScaleQuantumToShort(p->red),
+				     ScaleQuantumToShort(p->green),
+                                     ScaleQuantumToShort(p->blue));
+                      }
 		    else
 		      {
-			j += sprintf(&buffer[j],"%u %u %u ",ScaleQuantumToShort(p->red),
-				     ScaleQuantumToShort(p->green),ScaleQuantumToShort(p->blue));
+			j += sprintf(&buffer[j],"%u %u %u ",
+                                     (unsigned int) ScaleQuantumToLong(p->red),
+				     (unsigned int) ScaleQuantumToLong(p->green),
+                                     (unsigned int) ScaleQuantumToLong(p->blue));
 		      }
 		    i++;
 		    if (i == 4)
@@ -1759,7 +1733,7 @@ static unsigned int WritePNMImage(const ImageInfo *image_info,Image *image)
 	    /*
 	      Deduce correct export parameters.
 	    */
-	    bits_per_sample=(depth > 8 ? 16 : 8);
+            bits_per_sample=(depth <=8 ? 8 : (depth <= 16 ? 16 : 32));
 	    quantum_type=RGBQuantum;
 	    if (PBM_RAW_Format == format)
 	      {
